--- a/project-details.html
+++ b/project-details.html
@@ -10,7 +10,7 @@
 
         <main>
 
-            <div id="detail-area" class="project-details-row"></div>
+            <div id="detail-area" class="all-project-details"></div>
                        
         </main>
 
